# AbaciSever

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Server.h  SqlServer.h  main.cpp
gui/: ClientData.cpp  ClientData.h  ClientData.ui  CreateClient.cpp  CreateClient.h  DatabaseOptions.cpp  DatabaseOptions.h  DatabaseOptions.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  Resources.qrc  createclient.ui
